# paper-monitor

./: .gitignore  Makefile  README.md  docker-compose.yml  pom.xml
app/: README.md  pom.xml
paper-data-extractor/: Dockerfile  README.md  pyproject.toml
paper-data-extractor/data/contributed_models/: wieringa-2006-paper-classification.yaml
paper-data-extractor/data/generated_schemas/: composed-05eaf5c0d5a6f20e-review-schema.schema.json  composed-05eaf5c0d5a6f20e-review-schema.yaml  composed-1a6a2710e4393741-review-schema.schema.json  composed-1a6a2710e4393741-review-schema.yaml  composed-60117e2ce86139d4-review-schema.schema.json  composed-60117e2ce86139d4-review-schema.yaml  composed-98b8d74b2e11a1da-review-schema.schema.json  composed-98b8d74b2e11a1da-review-schema.yaml  composed-b12e8a08c9a417a7-review-schema.yaml  composed-bff1d5a6230bbbd3-review-schema.schema.json  composed-bff1d5a6230bbbd3-review-schema.yaml  composed-ebf2e362475d6ec4-review-schema.schema.json  composed-ebf2e362475d6ec4-review-schema.yaml  composed-f17cb2347af96504-review-schema.schema.json  composed-f17cb2347af96504-review-schema.yaml  wieringa-2006-paper-classification-review-schema.schema.json  wieringa-2006-paper-classification-review-schema.yaml
paper-data-extractor/data/review_designs/: test.yaml
paper-data-extractor/schemas/: data_extraction_model_metamodel.yaml  review_design_metamodel.yaml  systematic_survey_metamodel.yaml
paper-data-extractor/static/: app.js  styles.css
paper-data-extractor/templates/: index.html  review_graph.html  review_template.html  reviews.html
(+135 files in other folders)
